--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: ETH Sao Paulo
-subtitle: // Soon //
+subtitle: // <a href="https://www.meetup.com/ETHSaoPaulo">upcoming events</a> //
 use-site-title: true
 ---
 
